tests/ui/query-system/fn-sig-cycle-arity.rs
trait Dancer {
    fn dance(&self) -> _ {
        //~^ ERROR the placeholder `_` is not allowed within types on item signatures for return types
        self.dance()
    }
}

fn main() {}
